Restructured Domain and GroupAction. Started getOrbits for GAP engine. Started GAP parser. Changed structs to use array instead of list.